Додав пагінацію та ще там щось